--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             <div class="pass around-box">
               <p class="title">パスワード(確認用) <span class="asterisk">※</span></p>
-                <input type="password" name="pass" class="box text-input input-style" required>
+                <input type="password" name="pass-check" class="box text-input input-style" required>
             </div>
 
             <div class="hope-course around-box">
